# sundownfruit-cloud-bot

./: .gitignore  Cargo.toml  diesel.toml
migrations/2024-12-01-035756_service_quotas/: down.sql  up.sql
src/: main.rs  schema.rs
src/command/: create_vm.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/manager/: mod.rs  service_quotas.rs
