[package]
name = "sundownfruit_cloud_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
reqwest = "0.12.9"
diesel = { version = "2.2.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy ={ version = "0.15" }